Update with Sept event

--- a/css/hackernest-impress.css
+++ b/css/hackernest-impress.css
@@ -207,6 +207,10 @@ p {
   padding-bottom: 20px;
 }
 
+.logo.techweek img {
+  width: 100%;
+}
+
 .logo.twitter img {
   max-height: 200px;
   padding: 20px;
