Update with latest event decks

--- a/css/hackernest-impress.css
+++ b/css/hackernest-impress.css
@@ -207,8 +207,14 @@ p {
   padding-bottom: 20px;
 }
 
-.logo.techweek img {
+.logo.techweek img,
+.logo.rise img,
+{
   width: 100%;
+}
+
+.logo.grindr img {
+  max-height: 300px;
 }
 
 .logo.twitter img {
@@ -227,8 +233,14 @@ p {
   font-size: 0.8em;
 }
 
+.thanks .organizer-text .email {
+  font-size: 0.6em;
+}
+
 .thanks .organizer img {
+  margin-top: 1em;
   border-radius: 100%;
+  height: 200px;
 }
 
 .thanks .organizer-options {
@@ -237,13 +249,18 @@ p {
   font-weight: 700;
 }
 
-.thanks .organizer-message {
-  padding-top: 50px;
+.thanks ul.organizer-options {
+  display: inline-block;
+  margin: 0;
 }
 
-.thanks .organizer-message p {
+.thanks .organizer-options li {
+  display: inline-block;
+}
+
+.thanks .organizer-message span {
   font-weight: 300;
-  font-size: 0.6em;
+  font-size: 0.7em;
   padding: 0;
 }
 
